...

    // MARK: - UI
    private lazy var webView: WKWebView = {
        let webView = WKWebView()
        webView.navigationDelegate = self
        webView.translatesAutoresizingMaskIntoConstraints = false
        webView.accessibilityIdentifier = "UnsplashWebView"
        return webView
    }()
    
    private lazy var progressView: UIProgressView = {
        let progressView = UIProgressView(progressViewStyle: .default)
        progressView.translatesAutoresizingMaskIntoConstraints = false
...

    deinit {
        observation?.invalidate()
    }
    
    private func setupNavigationBar() {
        let backButton = UIButton(type: .system)
        backButton.setImage(UIImage(resource: .iconBackChevron), for: .normal)
        backButton.tintColor = UIColor(resource: .ypBlack)
        
        if #available(iOS 14.0, *) {
            backButton.addAction(UIAction { [weak self] _ in self?.didTapBack() }, for: .touchUpInside)
        } else {
...
