...
        
        if #available(iOS 14.0, *) {
            button.addAction(UIAction { [weak self] _ in self?.didTapLoginButton() }, for: .touchUpInside)
        } else {
            button.addTarget(self, action: #selector(didTapLoginButton), for: .touchUpInside)
        }
        button.accessibilityIdentifier = "Authenticate"
        return button
    }()

    // MARK: - Public Properties
    weak var delegate: AuthViewControllerDelegate?
    
...
